@@ -4,12 +4,15 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
+
 package com.powsybl.openrao.raoapi.parameters;
 
 import com.powsybl.openrao.commons.EICode;
 import com.powsybl.openrao.commons.OpenRaoException;
+import com.powsybl.openrao.raoapi.ZoneToZonePtdfDefinition;
 import com.powsybl.openrao.raoapi.parameters.extensions.OpenRaoSearchTreeParameters;
 import com.powsybl.iidm.network.Country;
+import com.powsybl.openrao.raoapi.parameters.extensions.SearchTreeRaoRangeActionsOptimizationParameters;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -18,7 +21,7 @@ import java.util.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- @author Godelaine de Montmorillon {@literal <godelaine.demontmorillon at rte-france.com>}
+ * @author Godelaine de Montmorillon {@literal <godelaine.demontmorillon at rte-france.com>}
  */
 class RaoParametersConsistencyTest {
     private final RaoParameters parameters = new RaoParameters();
@@ -63,11 +66,13 @@ class RaoParametersConsistencyTest {
         com.powsybl.openrao.raoapi.parameters.RelativeMarginsParameters relativeMarginsParameters = new com.powsybl.openrao.raoapi.parameters.RelativeMarginsParameters();
         relativeMarginsParameters.setPtdfBoundariesFromString(stringBoundaries);
         parameters.setRelativeMarginsParameters(relativeMarginsParameters);
-        assertEquals(1, parameters.getRelativeMarginsParameters().get().getPtdfBoundaries().size());
-        assertEquals(1, parameters.getRelativeMarginsParameters().get().getPtdfBoundaries().get(0).getWeight(new EICode(Country.BE)), 1e-6);
-        assertEquals(-1, parameters.getRelativeMarginsParameters().get().getPtdfBoundaries().get(0).getWeight(new EICode(Country.DE)), 1e-6);
-        assertEquals(1, parameters.getRelativeMarginsParameters().get().getPtdfBoundaries().get(0).getWeight(new EICode("22Y201903145---4")), 1e-6);
-        assertEquals(-1, parameters.getRelativeMarginsParameters().get().getPtdfBoundaries().get(0).getWeight(new EICode("22Y201903144---9")), 1e-6);
+        final List<ZoneToZonePtdfDefinition> ptdfBoundaries = parameters.getRelativeMarginsParameters().get().getPtdfBoundaries();
+        assertEquals(1, ptdfBoundaries.size());
+        final ZoneToZonePtdfDefinition firstPtdfBoundary = ptdfBoundaries.getFirst();
+        assertEquals(1, firstPtdfBoundary.getWeight(new EICode(Country.BE)), 1e-6);
+        assertEquals(-1, firstPtdfBoundary.getWeight(new EICode(Country.DE)), 1e-6);
+        assertEquals(1, firstPtdfBoundary.getWeight(new EICode("22Y201903145---4")), 1e-6);
+        assertEquals(-1, firstPtdfBoundary.getWeight(new EICode("22Y201903144---9")), 1e-6);
     }
 
     @Test
@@ -110,13 +115,15 @@ class RaoParametersConsistencyTest {
 
     @Test
     void testFailsOnLowSensitivityThreshold() {
-        Exception e = assertThrows(OpenRaoException.class, () -> stParameters.getRangeActionsOptimizationParameters().setPstSensitivityThreshold(0.));
+        final SearchTreeRaoRangeActionsOptimizationParameters rangeActionsOptimizationParameters = stParameters.getRangeActionsOptimizationParameters();
+
+        Exception e = assertThrows(OpenRaoException.class, () -> rangeActionsOptimizationParameters.setPstSensitivityThreshold(0.));
         assertEquals("pstSensitivityThreshold should be greater than 1e-6, to avoid numerical issues.", e.getMessage());
 
-        e = assertThrows(OpenRaoException.class, () -> stParameters.getRangeActionsOptimizationParameters().setHvdcSensitivityThreshold(1e-7));
+        e = assertThrows(OpenRaoException.class, () -> rangeActionsOptimizationParameters.setHvdcSensitivityThreshold(1e-7));
         assertEquals("hvdcSensitivityThreshold should be greater than 1e-6, to avoid numerical issues.", e.getMessage());
 
-        e = assertThrows(OpenRaoException.class, () -> stParameters.getRangeActionsOptimizationParameters().setInjectionRaSensitivityThreshold(0.));
+        e = assertThrows(OpenRaoException.class, () -> rangeActionsOptimizationParameters.setInjectionRaSensitivityThreshold(0.));
         assertEquals("injectionRaSensitivityThreshold should be greater than 1e-6, to avoid numerical issues.", e.getMessage());
     }
 }
