@@ -8,6 +8,7 @@
 package com.powsybl.openrao.searchtreerao.castor.algorithm;
 
 import com.powsybl.contingency.ContingencyElementType;
+import com.powsybl.iidm.network.TwoSides;
 import com.powsybl.openrao.commons.OpenRaoException;
 import com.powsybl.openrao.commons.Unit;
 import com.powsybl.openrao.data.crac.api.Crac;
@@ -15,10 +16,8 @@ import com.powsybl.openrao.data.crac.api.Identifiable;
 import com.powsybl.openrao.data.crac.api.Instant;
 import com.powsybl.openrao.data.crac.api.InstantKind;
 import com.powsybl.openrao.data.crac.api.State;
-import com.powsybl.iidm.network.TwoSides;
 import com.powsybl.openrao.data.crac.api.networkaction.ActionType;
 import com.powsybl.openrao.data.crac.api.networkaction.NetworkAction;
-import com.powsybl.openrao.data.crac.api.usagerule.UsageMethod;
 import com.powsybl.openrao.data.crac.impl.CracImplFactory;
 import com.powsybl.openrao.data.crac.impl.utils.CommonCracCreation;
 import org.junit.jupiter.api.Test;
@@ -31,8 +30,10 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Peter Mitri {@literal <peter.mitri at rte-france.com>}
@@ -92,8 +93,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("Contingency FR1 FR3"), contingencyScenario.getContingency());
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState2, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState2), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState2, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState2), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
 
         assertEquals(1, stateTree.getOperatorsNotSharingCras().size());
         assertEquals("operator2", stateTree.getOperatorsNotSharingCras().iterator().next());
@@ -187,7 +188,7 @@ class StateTreeTest {
             .withNetworkElement("pst1")
             .withInitialTap(1)
             .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-            .newOnContingencyStateUsageRule().withContingency("contingency-1").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+            .newOnContingencyStateUsageRule().withContingency("contingency-1").withInstant(CURATIVE_INSTANT_ID).add()
             .add();
         stateTree = new StateTree(crac);
         assertEquals(6, stateTree.getBasecaseScenario().getAllStates().size());
@@ -197,8 +198,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("contingency-1"), contingencyScenario.getContingency());
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(crac.getState("contingency-1", curativeInstant), contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(crac.getState("contingency-1", curativeInstant)), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(crac.getState("contingency-1", curativeInstant), contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(crac.getState("contingency-1", curativeInstant)), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
     }
 
     @Test
@@ -209,14 +210,14 @@ class StateTreeTest {
             .withNetworkElement("pst1")
             .withInitialTap(1)
             .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-            .newOnContingencyStateUsageRule().withContingency("contingency-1").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+            .newOnContingencyStateUsageRule().withContingency("contingency-1").withInstant(CURATIVE_INSTANT_ID).add()
             .add();
         crac.newPstRangeAction()
             .withId("pst-ra-2")
             .withNetworkElement("pst2")
             .withInitialTap(1)
             .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).add()
             .add();
         stateTree = new StateTree(crac);
         assertEquals(5, stateTree.getBasecaseScenario().getAllStates().size());
@@ -231,14 +232,14 @@ class StateTreeTest {
             .withNetworkElement("pst1")
             .withInitialTap(1)
             .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).add()
             .add();
         crac.newPstRangeAction()
             .withId("pst-ra-2")
             .withNetworkElement("pst2")
             .withInitialTap(1)
             .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+            .newOnContingencyStateUsageRule().withContingency("contingency-2").withInstant(CURATIVE_INSTANT_ID).add()
             .add();
         stateTree = new StateTree(crac);
         assertEquals(6, stateTree.getBasecaseScenario().getAllStates().size());
@@ -250,7 +251,7 @@ class StateTreeTest {
         setUpCustomCrac();
         Crac mockCrac = Mockito.spy(crac);
         State outageStateCont1 = crac.getState("contingency-1", outageInstant);
-        Mockito.when(mockCrac.getPotentiallyAvailableNetworkActions(outageStateCont1))
+        Mockito.when(mockCrac.getNetworkActions(outageStateCont1))
             .thenReturn(Set.of(Mockito.mock(NetworkAction.class)));
         OpenRaoException exception = assertThrows(OpenRaoException.class, () -> new StateTree(mockCrac));
         assertEquals("Outage state contingency-1 - outage has available RAs. This is not supported.", exception.getMessage());
@@ -299,7 +300,7 @@ class StateTreeTest {
                     .withSpeed(1)
                     .withInitialTap(1)
                     .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-                    .newOnContingencyStateUsageRule().withContingency("contingency").withInstant(AUTO_INSTANT_ID).withUsageMethod(UsageMethod.FORCED).add()
+                    .newOnContingencyStateUsageRule().withContingency("contingency").withInstant(AUTO_INSTANT_ID).add()
                     .add();
             }
         }
@@ -319,7 +320,7 @@ class StateTreeTest {
                     .withNetworkElement("pst")
                     .withInitialTap(1)
                     .withTapToAngleConversionMap(Map.of(1, 1., 2, 2.))
-                    .newOnContingencyStateUsageRule().withContingency("contingency").withInstant(CURATIVE_INSTANT_ID).withUsageMethod(UsageMethod.AVAILABLE).add()
+                    .newOnContingencyStateUsageRule().withContingency("contingency").withInstant(CURATIVE_INSTANT_ID).add()
                     .add();
             }
         }
@@ -372,8 +373,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("contingency"), contingencyScenario.getContingency());
         assertEquals(Optional.empty(), contingencyScenario.getAutomatonState());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
     }
 
     @Test
@@ -394,8 +395,8 @@ class StateTreeTest {
         assertEquals(Optional.of(autoState), stateTree.getContingencyScenarios().iterator().next().getAutomatonState());
         ContingencyScenario contingencyScenario = stateTree.getContingencyScenarios().iterator().next();
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
 
         // 4.3 Both AUTO and CURATIVE exist, only CURATIVE has RAs
         setUpCustomCracWithAutoInstant(true, false, true, true);
@@ -406,8 +407,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("contingency"), contingencyScenario.getContingency());
         assertEquals(Optional.empty(), contingencyScenario.getAutomatonState());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
 
         // 4.4 Both AUTO and CURATIVE exist and have RAs
         setUpCustomCracWithAutoInstant(true, true, true, true);
@@ -418,8 +419,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("contingency"), contingencyScenario.getContingency());
         assertEquals(Optional.of(autoState), contingencyScenario.getAutomatonState());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
     }
 
     @Test
@@ -436,8 +437,8 @@ class StateTreeTest {
         assertEquals(crac.getContingency("contingency"), contingencyScenario.getContingency());
         assertEquals(Optional.of(autoState), contingencyScenario.getAutomatonState());
         assertEquals(1, contingencyScenario.getCurativePerimeters().size());
-        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().get(0).getRaOptimisationState());
-        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().get(0).getAllStates());
+        assertEquals(curativeState1, contingencyScenario.getCurativePerimeters().getFirst().getRaOptimisationState());
+        assertEquals(Set.of(curativeState1), contingencyScenario.getCurativePerimeters().getFirst().getAllStates());
     }
 
     @Test
@@ -484,7 +485,7 @@ class StateTreeTest {
         ContingencyScenario contingencyScenario;
         List<State> allStates;
 
-        contingencyScenario = contingencyScenarios.get(0);
+        contingencyScenario = contingencyScenarios.getFirst();
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
         assertEquals("co-01", contingencyScenario.getContingency().getId());
         curativePerimeters = contingencyScenario
@@ -493,8 +494,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-01 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-01 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-01 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -507,10 +508,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-02 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-02 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-02 - curative1", allStates.get(0).getId());
+        assertEquals("co-02 - curative1", allStates.getFirst().getId());
         assertEquals("co-02 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(2);
@@ -522,8 +523,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-03 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-03 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(3);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -534,8 +535,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-04 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-04 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(4);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -546,8 +547,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-05 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-05 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(5);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -558,8 +559,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-09 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-09 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(6);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -570,10 +571,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-10 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-10 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-10 - curative1", allStates.get(0).getId());
+        assertEquals("co-10 - curative1", allStates.getFirst().getId());
         assertEquals("co-10 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(7);
@@ -585,8 +586,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-13 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-13 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         assertEquals(7, stateTree.getBasecaseScenario().getAllStates().size());
         assertCurativeStateInBaseCase(stateTree, multipleCurativeInstantsCrac, "co-05", "curative1");
@@ -611,7 +612,7 @@ class StateTreeTest {
         ContingencyScenario contingencyScenario;
         List<State> allStates;
 
-        contingencyScenario = contingencyScenarios.get(0);
+        contingencyScenario = contingencyScenarios.getFirst();
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
         assertEquals("co-01", contingencyScenario.getContingency().getId());
         curativePerimeters = contingencyScenario
@@ -620,8 +621,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-01 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-01 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-01 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -634,10 +635,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-02 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-02 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-02 - curative1", allStates.get(0).getId());
+        assertEquals("co-02 - curative1", allStates.getFirst().getId());
         assertEquals("co-02 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(2);
@@ -649,8 +650,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-03 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-03 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(3);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -661,8 +662,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-04 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-04 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(4);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -673,8 +674,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-05 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-05 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(5);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -685,8 +686,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-09 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-09 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(6);
         assertTrue(contingencyScenario.getAutomatonState().isEmpty());
@@ -697,10 +698,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-10 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-10 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-10 - curative1", allStates.get(0).getId());
+        assertEquals("co-10 - curative1", allStates.getFirst().getId());
         assertEquals("co-10 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(7);
@@ -712,8 +713,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-13 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-13 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         assertEquals(23, stateTree.getBasecaseScenario().getAllStates().size());
         assertCurativeStateInBaseCase(stateTree, multipleCurativeInstantsCrac, "co-05", "curative1");
@@ -754,7 +755,7 @@ class StateTreeTest {
         ContingencyScenario contingencyScenario;
         List<State> allStates;
 
-        contingencyScenario = contingencyScenarios.get(0);
+        contingencyScenario = contingencyScenarios.getFirst();
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
         assertEquals("co-01 - auto", contingencyScenario.getAutomatonState().get().getId());
         assertEquals("co-01", contingencyScenario.getContingency().getId());
@@ -764,8 +765,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-01 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-01 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-01 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -779,10 +780,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-02 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-02 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-02 - curative1", allStates.get(0).getId());
+        assertEquals("co-02 - curative1", allStates.getFirst().getId());
         assertEquals("co-02 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(2);
@@ -795,8 +796,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-03 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-03 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(3);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -808,8 +809,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-04 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-04 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(4);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -821,8 +822,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-05 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-05 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-05 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -836,10 +837,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-06 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-06 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-06 - curative1", allStates.get(0).getId());
+        assertEquals("co-06 - curative1", allStates.getFirst().getId());
         assertEquals("co-06 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(6);
@@ -852,8 +853,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-07 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-07", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-07 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-07", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(7);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -865,8 +866,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-08 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-08", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-08 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-08", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(8);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -878,8 +879,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-09 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-09 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(9);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -891,10 +892,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-10 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-10 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-10 - curative1", allStates.get(0).getId());
+        assertEquals("co-10 - curative1", allStates.getFirst().getId());
         assertEquals("co-10 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(10);
@@ -907,8 +908,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-13 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-13 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         assertEquals(1, stateTree.getBasecaseScenario().getAllStates().size());
     }
@@ -928,7 +929,7 @@ class StateTreeTest {
         ContingencyScenario contingencyScenario;
         List<State> allStates;
 
-        contingencyScenario = contingencyScenarios.get(0);
+        contingencyScenario = contingencyScenarios.getFirst();
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
         assertEquals("co-01 - auto", contingencyScenario.getAutomatonState().get().getId());
         assertEquals("co-01", contingencyScenario.getContingency().getId());
@@ -938,8 +939,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-01 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-01 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-01 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-01", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -953,10 +954,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-02 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-02 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-02 - curative1", allStates.get(0).getId());
+        assertEquals("co-02 - curative1", allStates.getFirst().getId());
         assertEquals("co-02 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(2);
@@ -969,8 +970,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-03 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-03 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-03", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(3);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -982,8 +983,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-04 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-04 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-04", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(4);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -995,8 +996,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(2, curativePerimeters.size());
-        assertEquals("co-05 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-05 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
         assertEquals("co-05 - curative2", curativePerimeters.get(1).getRaOptimisationState().getId());
         assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-05", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(1).getAllStates());
 
@@ -1010,10 +1011,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-06 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-06 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-06 - curative1", allStates.get(0).getId());
+        assertEquals("co-06 - curative1", allStates.getFirst().getId());
         assertEquals("co-06 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(6);
@@ -1026,8 +1027,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-07 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-07", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-07 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-07", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(7);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -1039,8 +1040,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-08 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-08", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-08 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-08", multipleCurativeInstantsCrac.getInstant("curative1"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(8);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -1052,8 +1053,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-09 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-09 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-09", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(9);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -1065,10 +1066,10 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-10 - curative1", curativePerimeters.get(0).getRaOptimisationState().getId());
-        allStates = curativePerimeters.get(0).getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
+        assertEquals("co-10 - curative1", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        allStates = curativePerimeters.getFirst().getAllStates().stream().sorted(Comparator.comparing(State::getId)).toList();
         assertEquals(2, allStates.size());
-        assertEquals("co-10 - curative1", allStates.get(0).getId());
+        assertEquals("co-10 - curative1", allStates.getFirst().getId());
         assertEquals("co-10 - curative2", allStates.get(1).getId());
 
         contingencyScenario = contingencyScenarios.get(10);
@@ -1093,8 +1094,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-13 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-13 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-13", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(13);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -1106,8 +1107,8 @@ class StateTreeTest {
             .sorted(Comparator.comparing(perimeter -> perimeter.getRaOptimisationState().getInstant().getOrder()))
             .toList();
         assertEquals(1, curativePerimeters.size());
-        assertEquals("co-14 - curative2", curativePerimeters.get(0).getRaOptimisationState().getId());
-        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-14", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.get(0).getAllStates());
+        assertEquals("co-14 - curative2", curativePerimeters.getFirst().getRaOptimisationState().getId());
+        assertEquals(Set.of(multipleCurativeInstantsCrac.getState("co-14", multipleCurativeInstantsCrac.getInstant("curative2"))), curativePerimeters.getFirst().getAllStates());
 
         contingencyScenario = contingencyScenarios.get(14);
         assertTrue(contingencyScenario.getAutomatonState().isPresent());
@@ -1259,7 +1260,6 @@ class StateTreeTest {
             .newOnContingencyStateUsageRule()
                 .withInstant(instantId)
                 .withContingency(contingencyId)
-                .withUsageMethod(UsageMethod.AVAILABLE)
                 .add()
             .add();
     }
