@@ -4,6 +4,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
+
 package com.powsybl.openrao.searchtreerao.commons.objectivefunctionevaluator;
 
 import com.powsybl.iidm.network.TwoSides;
@@ -233,7 +234,7 @@ class LoopFlowViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentLoopFlows, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(2, costlyElements.size());
-        assertSame(cnec1, costlyElements.get(0));
+        assertSame(cnec1, costlyElements.getFirst());
         assertSame(cnec2, costlyElements.get(1));
     }
 
@@ -256,6 +257,6 @@ class LoopFlowViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentLoopFlows, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(1, costlyElements.size());
-        assertSame(cnec2, costlyElements.get(0));
+        assertSame(cnec2, costlyElements.getFirst());
     }
 }
